# adams-first-renderer

./: README.md  pyproject.toml
assets/models/: cube.afrmodel
gra/: __init__.py  draw.py  main.py  primitives.py  settings.py  state.py
src/afr/: __init__.py  cli.py  core_rendering.py  draw.py  input.py  main.py  physics.py  poo.py  primitives.py  rendering.py  scene.py  settings.py  state.py  utils.py  vec2.py
src/afr/linalg/: __init__.py  mat3.py  mat4.py  vec3.py  vec4.py
src/afr/models/: __init__.py  afrmodel.py  gltf.py  model.py  mtl.py  obj.py
