[project]
name = "adams-first-renderer"
version = "0.1.0"
description = "Adams First Renderer (AFR): a from-scratch educational software renderer for learning graphics fundamentals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pyglm>=2.8.3",
]

[project.scripts]
afr = "afr.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
